# skooma

./: .clang-format  CMakeLists.txt  appveyor.yml  conanfile.py  skooma.rc
dll/: IDirect3DDevice9Vtbl.h  WindowsHook.h  dllmain.cpp  prochook.cpp  prochook.h  win32.cpp
exe/: Menu.cpp  Menu.h  NotificationIcon.cpp  NotificationIcon.h  Skooma.cpp  main.cpp
src/: Config.cpp  Config.h  Skooma.cpp  Skooma.h  WindowsHook.cpp  d3d9hook.cpp  dinput8hook.cpp  dinput8hook.h  dllmain.cpp  gamehook.cpp  gamehook.h  hook.cpp  hook.h  win32.cpp  win32.h
